--- a/src/main/res/layout/activity_attendee_add_event.xml
+++ b/src/main/res/layout/activity_attendee_add_event.xml
@@ -50,7 +50,7 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/className"
+                android:id="@+id/eventName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
@@ -69,7 +69,7 @@
 
 
             <EditText
-                android:id="@+id/classCode"
+                android:id="@+id/eventCode"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
@@ -99,7 +99,7 @@
                 android:textSize="20sp"/>
 
             <TextView
-                android:id="@+id/addAnotherClass"
+                android:id="@+id/addAnotherEvent"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
