--- a/src/main/res/layout/activity_parent_add_child.xml
+++ b/src/main/res/layout/activity_parent_add_child.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,7 +29,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:onClick="gotoBack"
-                    android:src="@drawable/backtolist" />
+                    android:src="@drawable/backtolist"/>
 
                 <TextView
                     android:id="@+id/txtTitle"
@@ -38,13 +39,13 @@
                     android:gravity="center_horizontal"
                     android:text="Add Child"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"/>
 
                 <ImageView
                     android:id="@+id/imgHelp"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/question_mark" />
+                    android:src="@drawable/question_mark"/>
 
             </LinearLayout>
 
@@ -63,7 +64,7 @@
                 android:textCursorDrawable="@null"
                 android:textSize="20sp">
 
-                <requestFocus />
+                <requestFocus/>
             </EditText>
 
 
@@ -80,79 +81,49 @@
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textCursorDrawable="@null"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
-            <Button
-                android:id="@+id/saveIt"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/white"
+            <ImageView
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:ems="30"
+                android:hint="Class code"
+                android:inputType="textShortMessage"
+                android:src="@drawable/add"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="20sp"/>
+
+            <ImageButton
+                android:id="@+id/deleteButton"
+                android:layout_width="40dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/blank"
+                android:src="@drawable/delete"/>
+
+            <TextView
+                android:id="@+id/addAnotherClass"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:ems="30"
                 android:gravity="center"
-                android:text="Save"
-                android:textAllCaps="false"
-                android:textColor="@color/blue"
-                android:textSize="20sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <LinearLayout
-                    android:id="@+id/addAnotherClass"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="20dp"
-                        android:ems="30"
-                        android:hint="Class code"
-                        android:inputType="textShortMessage"
-                        android:src="@drawable/add"
-                        android:textColor="@color/white"
-                        android:textColorHint="@color/white"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="10dp"
-                        android:ems="10"
-                        android:gravity="center"
-                        android:text="Add another child"
-                        android:textColor="@color/white"
-                        android:textColorHint="@color/white"
-                        android:textSize="15sp" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageButton
-                        android:id="@+id/deleteButton"
-                        android:layout_width="40dp"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="20dp"
-                        android:background="@android:color/transparent"
-                        android:contentDescription="@string/blank"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/delete"
-                        android:visibility="gone" />
-                </LinearLayout>
-            </LinearLayout>
+                android:text="Add another child"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textSize="20sp"/>
 
         </LinearLayout>
     </RelativeLayout>
@@ -175,20 +146,20 @@
             android:text="Done"
             android:textAllCaps="false"
             android:textColor="@color/blue"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <Button
             android:id="@+id/skip"
             android:layout_width="match_parent"
+            android:textAllCaps="false"
             android:layout_height="60dp"
             android:background="@android:color/transparent"
             android:gravity="center"
             android:onClick="gotoBack"
             android:text="Skip for Now"
-            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:textSize="20sp"/>
     </LinearLayout>
 
 </RelativeLayout>
