--- a/src/main/res/layout/activity_event_host_dashboard.xml
+++ b/src/main/res/layout/activity_event_host_dashboard.xml
@@ -16,7 +16,7 @@
             android:padding="10dp">
 
             <ImageView
-                android:id="@+id/addEventButton"
+                android:id="@+id/addClassButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
@@ -65,7 +65,6 @@
                 android:textColor="@color/blue"
                 android:textSize="38sp" />
         </RelativeLayout>
-
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
