--- a/src/main/res/layout/activity_event_host_dashboard.xml
+++ b/src/main/res/layout/activity_event_host_dashboard.xml
@@ -151,7 +151,7 @@
                                 android:layout_marginTop="10dp"
                                 android:gravity="center_horizontal"
                                 android:minHeight="40dp"
-                                android:text="Students"
+                                android:text="Attendees"
                                 android:textSize="15sp"
                                 tools:ignore="RtlSymmetry" />
                         </LinearLayout>
@@ -176,7 +176,7 @@
                                 android:layout_marginTop="10dp"
                                 android:gravity="center_horizontal"
                                 android:minHeight="40dp"
-                                android:text="Broadcast"
+                                android:text="Send Event Notice"
                                 android:textSize="15sp"
                                 tools:ignore="RtlSymmetry" />
                         </LinearLayout>
@@ -259,86 +259,6 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:id="@+id/classInformationLayout"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
-                                android:layout_gravity="center_horizontal"
-                                android:src="@drawable/class_info" />
-
-                            <TextView
-                                android:layout_width="130dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center_horizontal"
-                                android:minHeight="40dp"
-                                android:text="Class Information"
-                                android:textSize="15sp"
-                                tools:ignore="RtlSymmetry" />
-                        </LinearLayout>
-
-                        <RelativeLayout
-                            android:id="@+id/classNotificationLayout"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
-
-                            <ImageView
-                                android:id="@+id/icon_noti"
-                                android:layout_width="100dp"
-                                android:layout_height="100dp"
-                                android:layout_alignTop="@+id/totalNotificationsTextView"
-                                android:layout_centerHorizontal="true"
-                                android:layout_gravity="center_horizontal"
-                                android:src="@drawable/ghanti" />
-
-                            <TextView
-                                android:id="@+id/totalNotificationsTextView"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:layout_alignRight="@+id/icon_noti"
-                                android:background="@drawable/back_badge"
-                                android:gravity="center"
-                                android:text="10"
-                                android:textColor="@color/white"
-                                android:textSize="18sp"
-                                android:visibility="gone"
-                                tools:ignore="RtlSymmetry" />
-
-                            <TextView
-                                android:id="@+id/text_not"
-                                android:layout_width="130dp"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/icon_noti"
-                                android:layout_centerHorizontal="true"
-                                android:layout_gravity="center_horizontal"
-                                android:layout_marginTop="10dp"
-                                android:gravity="center_horizontal"
-                                android:minHeight="40dp"
-                                android:text="Class Notifications"
-                                android:textSize="15sp"
-                                tools:ignore="RtlSymmetry" />
-
-                        </RelativeLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
                             android:id="@+id/absenceLayout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -349,7 +269,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_gravity="center_horizontal"
-                                android:src="@drawable/absences" />
+                                android:src="@drawable/alerts1" />
 
                             <TextView
                                 android:layout_width="130dp"
@@ -358,7 +278,7 @@
                                 android:layout_marginTop="10dp"
                                 android:gravity="center_horizontal"
                                 android:minHeight="40dp"
-                                android:text="Absences"
+                                android:text="Alerts"
                                 android:textSize="15sp"
                                 tools:ignore="RtlSymmetry" />
                         </LinearLayout>
