--- a/src/main/res/layout/activity_event_host_dashboard.xml
+++ b/src/main/res/layout/activity_event_host_dashboard.xml
@@ -38,7 +38,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/navigationButton"
-                android:layout_toRightOf="@+id/addClassButton"
+                android:layout_toRightOf="@+id/addEventButton"
+                android:layout_toEndOf="@+id/addEventButton"
                 android:layout_toStartOf="@+id/navigationButton"
                 android:gravity="center"
                 android:text="Event"
