--- a/src/main/res/layout/list_item_student.xml
+++ b/src/main/res/layout/list_item_student.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/headerEmail"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
@@ -46,6 +47,7 @@
         android:textColor="@color/darkblue" />
 
     <TextView
+        android:id="@+id/headerEmailParent"
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:gravity="fill_vertical"
