--- a/src/main/res/layout/activity_parent_add_child.xml
+++ b/src/main/res/layout/activity_parent_add_child.xml
@@ -97,6 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_horizontal"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -104,6 +105,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_gravity="center"
                     android:orientation="vertical">
 
                     <ImageView
@@ -135,10 +137,12 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/deleteButtonLayout"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <ImageButton
                         android:id="@+id/deleteButton"
@@ -150,7 +154,7 @@
                         android:contentDescription="@string/blank"
                         android:scaleType="fitXY"
                         android:src="@drawable/delete"
-                        android:visibility="gone" />
+                         />
                 </LinearLayout>
             </LinearLayout>
 
