--- a/src/main/res/layout/activity_event_host_dashboard.xml
+++ b/src/main/res/layout/activity_event_host_dashboard.xml
@@ -16,7 +16,7 @@
             android:padding="10dp">
 
             <ImageView
-                android:id="@+id/addEventButton"
+                android:id="@+id/addClassButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
@@ -38,11 +38,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/navigationButton"
-                android:layout_toRightOf="@+id/addEventButton"
-                android:layout_toEndOf="@+id/addEventButton"
+                android:layout_toRightOf="@+id/addClassButton"
                 android:layout_toStartOf="@+id/navigationButton"
                 android:gravity="center"
-                android:text="Event"
+                android:text="Events"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/white" />
         </RelativeLayout>
@@ -66,7 +65,6 @@
                 android:textColor="@color/blue"
                 android:textSize="38sp" />
         </RelativeLayout>
-
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
@@ -152,7 +150,7 @@
                                 android:layout_marginTop="10dp"
                                 android:gravity="center_horizontal"
                                 android:minHeight="40dp"
-                                android:text="Students"
+                                android:text="Attendee"
                                 android:textSize="15sp"
                                 tools:ignore="RtlSymmetry" />
                         </LinearLayout>
@@ -279,7 +277,7 @@
                                 android:layout_marginTop="10dp"
                                 android:gravity="center_horizontal"
                                 android:minHeight="40dp"
-                                android:text="Class Information"
+                                android:text="Event Information"
                                 android:textSize="15sp"
                                 tools:ignore="RtlSymmetry" />
                         </LinearLayout>
@@ -324,7 +322,7 @@
                                 android:layout_marginTop="10dp"
                                 android:gravity="center_horizontal"
                                 android:minHeight="40dp"
-                                android:text="Class Notifications"
+                                android:text="Event Notifications"
                                 android:textSize="15sp"
                                 tools:ignore="RtlSymmetry" />
 
@@ -425,7 +423,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:padding="20dp"
-            android:text="@string/no_event_data"
+            android:text="@string/no_company_data"
             android:textSize="20sp" />
 
     </LinearLayout>
