manager/employee section 9 sep

--- a/src/main/res/layout/activity_teacher_send_message_to_one_class.xml
+++ b/src/main/res/layout/activity_teacher_send_message_to_one_class.xml
@@ -50,7 +50,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/linearLayout2"
-        android:layout_below="@+id/relativeLayout" />
+        android:layout_below="@+id/relativeLayout"
+        android:transcriptMode="alwaysScroll"
+        android:stackFromBottom="true" />
 
 
     <TextView
