--- a/src/main/res/layout/list_item_class_message.xml
+++ b/src/main/res/layout/list_item_class_message.xml
@@ -12,15 +12,17 @@
         android:layout_margin="15dp"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
         <ImageView
             android:id="@+id/imgPhoto"
             android:layout_width="60dp"
-            android:layout_height="70dp"
-            android:paddingRight="5dp"
-            android:padding="10dp"
+            android:layout_height="60dp"
             android:layout_marginRight="5dp"
+            android:layout_gravity="center_vertical"
+            android:padding="5dp"
+            android:scaleType="fitXY"
             android:background="@color/blue"
             android:src="@drawable/ic_launcher"/>
 
@@ -57,6 +59,7 @@
                     android:layout_height="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="30dp"
+
                     android:src="@drawable/start"/>
             </LinearLayout>
 
