--- a/src/main/res/layout/activity_add_class_event_company.xml
+++ b/src/main/res/layout/activity_add_class_event_company.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,7 +28,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:onClick="gotoBack"
-                    android:src="@drawable/backtolist"/>
+                    android:src="@drawable/backtolist" />
 
                 <TextView
                     android:id="@+id/txtTitle"
@@ -39,13 +38,13 @@
                     android:gravity="center_horizontal"
                     android:text="Class Setup"
                     android:textColor="@color/white"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp" />
 
                 <ImageView
                     android:id="@+id/imgHelp"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/question_mark"/>
+                    android:src="@drawable/question_mark" />
 
             </LinearLayout>
 
@@ -63,7 +62,7 @@
                 android:textCursorDrawable="@null"
                 android:textSize="20sp">
 
-                <requestFocus/>
+                <requestFocus />
             </EditText>
 
 
@@ -79,37 +78,52 @@
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textCursorDrawable="@null"
-                android:textSize="20sp"/>
-
-            <ImageView
-                android:id="@+id/saveButton"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:ems="30"
-                android:hint="Class code"
-                android:inputType="textShortMessage"
-                android:src="@drawable/add"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:id="@+id/addAnotherClass"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:ems="30"
+                android:textSize="20sp" />
+            <Button
+                android:id="@+id/justSave"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/white"
                 android:gravity="center"
-                android:src="@drawable/add"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:textSize="20sp"/>
+                android:text="Save"
+                android:textAllCaps="false"
+                android:textColor="@color/blue"
+                android:textSize="20sp" />
+            <RelativeLayout
+                android:id="@+id/resetLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
 
+                <ImageView
+                    android:id="@+id/saveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:ems="30"
+                    android:hint="Class code"
+                    android:inputType="textShortMessage"
+                    android:src="@drawable/add"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/addAnotherClass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/saveButton"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:ems="30"
+                    android:gravity="center"
+                    android:src="@drawable/add"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="20sp" />
+            </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
 
@@ -131,20 +145,20 @@
             android:text="Done"
             android:textAllCaps="false"
             android:textColor="@color/blue"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/skip"
             android:layout_width="match_parent"
-            android:textAllCaps="false"
             android:layout_height="60dp"
             android:background="@android:color/transparent"
             android:gravity="center"
             android:onClick="gotoBack"
             android:text="Skip for Now"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:visibility="gone"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:visibility="gone" />
     </LinearLayout>
 
 </RelativeLayout>
