--- a/src/main/res/layout/activity_contact_us.xml
+++ b/src/main/res/layout/activity_contact_us.xml
@@ -1,26 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="fill_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/blue"
     android:orientation="vertical"
-              tools:context=".Contact_us">
+    tools:context=".Contact_us">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/blue"
-            android:orientation="vertical" 
+            android:orientation="vertical"
             android:padding="10dp">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="66dp"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
 
                 <TextView
@@ -31,13 +31,14 @@
                     android:text="Contact us"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/white" />
+
                 <ImageView
                     android:id="@+id/imgBack"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:onClick="gotoBack"
                     android:layout_alignParentLeft="true"
                     android:contentDescription="BackArrow"
+                    android:onClick="gotoBack"
                     android:src="@drawable/backtolist" />
 
                 <ImageView
@@ -47,6 +48,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_gravity="right"
                     android:contentDescription="RightIcon"
+                    android:visibility="gone"
                     android:src="@drawable/question_mark" />
 
             </RelativeLayout>
@@ -55,28 +57,64 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blue"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imgCall"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_alignParentLeft="true"
-                        android:src="@drawable/call" />
+                    <RelativeLayout
+                        android:id="@+id/callus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true">
 
-                    <ImageView
-                        android:id="@+id/imgVisit"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/visit" />
+                        <ImageView
+                            android:id="@+id/imgCall"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_centerHorizontal="true"
+                            android:src="@drawable/call" />
+
+
+                        <TextView
+                            android:id="@+id/txtCallNow"
+                            android:layout_width="100dp"
+                            android:layout_height="45dp"
+                            android:layout_below="@+id/imgCall"
+                            android:gravity="center"
+                            android:text="Call now"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:textColor="@color/white" />
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/visitus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true">
+
+                        <ImageView
+                            android:id="@+id/imgVisit"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_centerHorizontal="true"
+                            android:src="@drawable/visit" />
+
+                        <TextView
+                            android:id="@+id/txtVisitUs"
+                            android:layout_width="100dp"
+                            android:layout_height="45dp"
+
+                            android:layout_below="@+id/imgVisit"
+                            android:gravity="center"
+                            android:text="Visit us "
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:textColor="@color/white" />
+                    </RelativeLayout>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -84,25 +122,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="30dp"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/txtCallNow"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:layout_alignParentLeft="true"
-                        android:text="Call now"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textColor="@color/white" />
 
-                    <TextView
-                        android:id="@+id/txtVisitUs"
-                        android:layout_width="100dp"
-                        android:layout_height="45dp"
-                        android:layout_alignParentRight="true"
-                        android:text="Visit us "
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textColor="@color/white" />
                 </RelativeLayout>
             </LinearLayout>
 
@@ -120,8 +142,8 @@
                 android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
                 android:textColor="@color/white"
-                android:textCursorDrawable="@null"
-                android:textColorHint="@color/white" >
+                android:textColorHint="@color/white"
+                android:textCursorDrawable="@null">
 
                 <requestFocus />
             </EditText>
@@ -139,8 +161,8 @@
                 android:inputType="textMultiLine"
                 android:padding="15dp"
                 android:textColor="@color/white"
-                android:textCursorDrawable="@null"
-                android:textColorHint="@color/white" >
+                android:textColorHint="@color/white"
+                android:textCursorDrawable="@null">
 
                 <requestFocus />
             </EditText>
@@ -150,7 +172,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/txtSend"
